tests/paczka1/small_fuzzy/49595806.err
Error in line 2: OjH A711 39,3
Error in line 3: OjH S862 41,9
